--- a/depolyment.yml
+++ b/depolyment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: zomato-clone-app
+  name: zomato-app
   labels:
-    app: zomato-clone-app
+    app: zomato-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: zomato-clone-app
+      app: zomato-app
   template:
     metadata:
       labels:
-        app: zomato-clone-app
+        app: zomato-app
     spec:
       terminationGracePeriodSeconds: 30
       containers:
-      - name: zomato-clone-app
+      - name: zomato-app
         image: pradeepkumara01/zomato:latest
         imagePullPolicy: "Always"
         ports:
