--- a/service.yml
+++ b/service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: zomato-clone-app
+  name: zomato-app
   labels:
-    app: zomato-clone-app
+    app: zomato-app
 spec:
   type: LoadBalancer
   ports:
